<resources>
    <string name="app_name">Pay Calculator</string>
    <string name="shift_title">Shift/Day Title</string>
    <string name="shift_title_hint">Day 1</string>
    <string name="shift_title_label">Title of shift or day worked</string>
    <string name="shift_hours">Hours Worked</string>
    <string name="shift_hours_label">Hours Worked</string>
    <string name="shift_hours_hint">Number of hours worked</string>
    <string name="new_shift">New Shift</string>
    <string name="calculate_pay">Calculate Pay</string>
    <string name="hourly_wage">7.10</string>
    <string name="hourly_wage_hint">7.10</string>
    <string name="hourly_wage_label">Pay Per Hour</string>
    <string name="total_hours">Total Hours</string>
    <string name="total_hours_label">Total Hours</string>
    <string name="total_hours_hint">Total Hours</string>
    <string name="total_pay">Total Amount Earned</string>
</resources>