<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:weightSum="1">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shift_title_label"/>

    <EditText
        android:id="@+id/shift_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shift_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shift_hours_label"/>

    <EditText
        android:id="@+id/shift_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shift_hours_hint"
        android:inputType="number" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hourly_wage_label"/>

    <EditText
        android:id="@+id/hourly_wage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hourly_wage_hint"
        android:inputType="number|numberDecimal" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_hours_label"/>

    <EditText
        android:id="@+id/total_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_hours_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/calculate_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_pay" />

    <EditText
        android:id="@+id/total_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_pay"
        android:inputType="numberDecimal" />

</LinearLayout>